--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.1",
     "gatsby-plugin-image": "^2.1.0",
