--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.1",
+    "gatsby-plugin-html-comments": "^1.0.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.1",
@@ -27,7 +28,9 @@
     "gatsby-transformer-sharp": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-fns": "^1.4.0",
     "react-helmet": "^6.1.0",
+    "react-reveal": "^1.2.2",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.3"
   },
